refactor: now api is under /api
- /api prefix added
- seperated /auth and /admin apis
- modules -> core package
- statik docs refactor
