# docs/swagger.json
@@ -11,9 +11,9 @@
     },
     "basePath": "/",
     "paths": {
-        "/": {
+        "/api": {
             "get": {
-                "description": "Welcome",
+                "description": "Welcome message",
                 "consumes": [
                     "application/json"
                 ],
@@ -34,7 +34,79 @@
                 }
             }
         },
-        "/auth/refresh": {
+        "/api/admin/user/{identity}": {
+            "patch": {
+                "description": "Partially Update User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Update User",
+                "parameters": [
+                    {
+                        "description": "Update User Params",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/UpdateUserParams"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Identity can either be email or id",
+                        "name": "identity",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "UserResponse",
+                        "schema": {
+                            "$ref": "#/definitions/UserResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/admin/users": {
+            "get": {
+                "description": "Fetch multiple users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Fetch Users",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number: Default 1",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Per Page: Default 100",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "UsersResponse",
+                        "schema": {
+                            "$ref": "#/definitions/UsersResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/refresh": {
             "get": {
                 "description": "Refreshes Access Token",
                 "consumes": [
@@ -46,7 +118,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Refresh",
+                "summary": "Refresh Token",
                 "parameters": [
                     {
                         "type": "boolean",
@@ -65,9 +137,9 @@
                 }
             }
         },
-        "/auth/reset": {
+        "/api/auth/reset": {
             "post": {
-                "description": "Reset Password",
+                "description": "Reset password with a verified email email",
                 "consumes": [
                     "application/json"
                 ],
@@ -77,7 +149,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Reset",
+                "summary": "Reset Password",
                 "parameters": [
                     {
                         "description": "ResetPasswordParams",
@@ -92,14 +164,14 @@
                 "responses": {}
             }
         },
-        "/auth/signin": {
+        "/api/auth/signin": {
             "get": {
                 "security": [
                     {
                         "BasicAuth": []
                     }
                 ],
-                "description": "Signin using credentials",
+                "description": "SignIn using credentials",
                 "consumes": [
                     "application/json"
                 ],
@@ -109,7 +181,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Signin",
+                "summary": "SignIn User",
                 "parameters": [
                     {
                         "type": "boolean",
@@ -128,16 +200,16 @@
                 }
             }
         },
-        "/auth/signout/{provider}": {
+        "/api/auth/signout/{provider}": {
             "get": {
-                "description": "Signout from a provider",
+                "description": "Signout session(s) or a provider",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Signout",
+                "summary": "SignOut User",
                 "parameters": [
                     {
                         "type": "string",
@@ -150,9 +222,9 @@
                 "responses": {}
             }
         },
-        "/auth/signup": {
+        "/api/auth/signup": {
             "post": {
-                "description": "Signup using email and password",
+                "description": "Sign up a new user using email and password",
                 "consumes": [
                     "application/json"
                 ],
@@ -162,10 +234,10 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Signup",
+                "summary": "SignUp User",
                 "parameters": [
                     {
-                        "description": "Signup request params",
+                        "description": "sign up params : email and password",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -184,7 +256,7 @@
                 }
             }
         },
-        "/auth/user": {
+        "/api/auth/user": {
             "get": {
                 "description": "Get Authenticated User",
                 "produces": [
@@ -193,7 +265,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "User",
+                "summary": "User Fetch",
                 "responses": {
                     "200": {
                         "description": "UserResponse",
@@ -214,7 +286,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Delete",
+                "summary": "User Delete",
                 "parameters": [
                     {
                         "type": "string",
@@ -226,14 +298,14 @@
                 "responses": {}
             },
             "patch": {
-                "description": "Update Authenticated User",
+                "description": "Partially Update User",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Auth"
                 ],
-                "summary": "User",
+                "summary": "Update User",
                 "parameters": [
                     {
                         "description": "Update User Params",
@@ -255,7 +327,7 @@
                 }
             }
         },
-        "/auth/verify": {
+        "/api/auth/verify": {
             "get": {
                 "description": "Email Verification",
                 "consumes": [
@@ -267,7 +339,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Verify",
+                "summary": "Verify Email",
                 "parameters": [
                     {
                         "type": "string",
@@ -293,7 +365,7 @@
                 }
             }
         },
-        "/auth/{provider}": {
+        "/api/auth/{provider}": {
             "get": {
                 "description": "Authenticates a user with a specified oauth provider",
                 "produces": [
@@ -302,7 +374,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "OAuth",
+                "summary": "OAuth Provider",
                 "parameters": [
                     {
                         "enum": [
@@ -326,7 +398,7 @@
                 }
             }
         },
-        "/docs": {
+        "/api/docs": {
             "get": {
                 "produces": [
                     "text/html"
@@ -345,9 +417,9 @@
                 }
             }
         },
-        "/health": {
+        "/api/health": {
             "get": {
-                "description": "Health Check",
+                "description": "Api Health Check",
                 "consumes": [
                     "application/json"
                 ],
@@ -363,105 +435,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/HealthResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/users": {
-            "get": {
-                "description": "Fetch multiple users",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Resources"
-                ],
-                "summary": "Multiple Users",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Page number: Default 1",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Per Page: Default 100",
-                        "name": "limit",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "UsersResponse",
-                        "schema": {
-                            "$ref": "#/definitions/UsersResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{identity}": {
-            "get": {
-                "description": "Fetch specific user",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Resources"
-                ],
-                "summary": "Single User",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Identity can either be email or id",
-                        "name": "identity",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "UserResponse",
-                        "schema": {
-                            "$ref": "#/definitions/UserResponse"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "description": "Partially Update User",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Resources"
-                ],
-                "summary": "Update User",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Identity can either be email or id",
-                        "name": "identity",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Update User Params",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/UpdateUserParams"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "UserResponse",
-                        "schema": {
-                            "$ref": "#/definitions/UserResponse"
                         }
                     }
                 }
